[package]
name = "country-counter"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.12"
libsql-client = { version = "0.6.1", default-features = false, features = ["workers_backend"] }
wasm-bindgen = "=0.2.83" # FIXME: workers do not work with 0.2.84 for some reason, investigate

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
anyhow = "1.0.69"

[dev-dependencies]
# A local database file will be used for tests
libsql-client = { version = "0.6.1", default-features = false, features = ["local_backend"] }
tokio = { version = "1", features = ["rt", "macros"] }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
